# cmake_minimum_required(VERSION <specify CMake version here>)
project(channing)

set(CMAKE_CXX_STANDARD 14)

add_executable(channing main.cpp "6_function/6_3.h" 6_function/6_4.h 6_function/6_5.h 6_function/6_10.h 6_function/6_7.h 6_function/6_12.h 6_function/6_11.h 6_function/6_16.h 6_function/6_17.h 6_function/6_21.h 6_function/6_22.h 6_function/6_25.h 6_function/6_27.h 6_function/6_32.h 6_function/6_33.h 6_function/6_42.h 6_function/6_44.h 6_function/6_54.h 9_sequentialContainer/9_2.h 9_sequentialContainer/9_4.h 9_sequentialContainer/9_5.h 9_sequentialContainer/9_13.h 9_sequentialContainer/9_14.h 9_sequentialContainer/9_15.h 9_sequentialContainer/9_16.h 9_sequentialContainer/9_18.h 9_sequentialContainer/9_19.h 9_sequentialContainer/9_20.h 9_sequentialContainer/9_24.h 9_sequentialContainer/9_26.h 9_sequentialContainer/9_38.h 9_sequentialContainer/9_42.h 10_algorithm/10_1.h 10_algorithm/10_2.h)